# gravitational_sim

./: .gitignore  README.md  parameters.yml  pyproject.toml  test_binary.ipynb  test_solar_system.ipynb
src/: animate.py  astroquery.py  solarsys.py  utils.py
