[tool.poetry]
name = "gravitational_sim"
version = "0.1.0"
description = ""
authors = ["Alessio <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = "^1.20.2"
jupyter = "^1.0.0"
numba = "^0.53.1"
notebook = "^6.3.0"
matplotlib = "^3.4.1"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
